<resources>
    <string name="app_name">Unit Converter Ultimate</string>
    <string name="test">test</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="default_value">1</string>
    <string name="text_swap">SWAP</string>
    <string name="contentDescriptionDummy">transparent image for view anchoring</string>
    <string name="drawerOpen">Navigation Drawer Open</string>
    <string name="drawerClose">Navigation Drawer Close</string>
    <string name="fromCelsius">Celsius</string>
    <string name="fromFahrenheit">Fahrenheit</string>
    <string name="fromKelvin">Kelvin</string>
    <string name="fromRankine">Rankine</string>
    <string name="fromDelisle">Delisle</string>
    <string name="fromNewton">Newton</string>
    <string name="fromReaumur">Réaumur</string>
    <string name="fromRomer">Rømer</string>
    <string name="fromGasMark">Gas Mark</string>
    <string name="toCelsius">Celsius</string>
    <string name="toFahrenheit">Fahrenheit</string>
    <string name="toKelvin">Kelvin</string>
    <string name="toRankine">Rankine</string>
    <string name="toDelisle">Delisle</string>
    <string name="toNewton">Newton</string>
    <string name="toReaumur">Réaumur</string>
    <string name="toRomer">Rømer</string>
    <string name="toGasMark">Gas Mark</string>
    <string name="fromKilometre">Kilometre</string>
    <string name="fromMile">Miles</string>
    <string name="fromMetre">Metre</string>
    <string name="fromCentimetre">Centimetre (cm)</string>
    <string name="fromMillimetre">Millimetre (mm)</string>
    <string name="fromMicrometre">Micrometre</string>
    <string name="fromNanometre">Nanometre</string>
    <string name="fromYard">Yard</string>
    <string name="fromFeet">Feet</string>
    <string name="fromInch">Inch</string>
    <string name="fromNauticalMile">Nautical Mile</string>
    <string name="fromFurlong">Furlong</string>
    <string name="fromLightYear">Light Year</string>
    <string name="toKilometre">Kilometre</string>
    <string name="toMile">Miles</string>
    <string name="toMetre">Metre</string>
    <string name="toCentimetre">Centimetre (cm)</string>
    <string name="toMillimetre">Millimetre (mm)</string>
    <string name="toMicrometre">Micrometre</string>
    <string name="toNanometre">Nanometre</string>
    <string name="toYard">Yard</string>
    <string name="toFeet">Feet</string>
    <string name="toInch">Inch</string>
    <string name="toNauticalMile">Nautical Mile</string>
    <string name="toFurlong">Furlong</string>
    <string name="toLightYear">Light Year</string>
    <string name="fromKilogram">Kilogram</string>
    <string name="fromPound">Pound</string>
    <string name="fromGram">Gram</string>
    <string name="fromMilligram">Milligram</string>
    <string name="fromOunce">Ounce</string>
    <string name="fromGrain">Grain</string>
    <string name="fromStone">Stone</string>
    <string name="fromMetricTon">Ton (metric)</string>
    <string name="fromShortTon">Ton (US/short)</string>
    <string name="fromLongTon">Ton (UK/long)</string>
    <string name="toKilogram">Kilogram</string>
    <string name="toPound">Pound</string>
    <string name="toGram">Gram</string>
    <string name="toMilligram">Milligram</string>
    <string name="toOunce">Ounce</string>
    <string name="toGrain">Grain</string>
    <string name="toStone">Stone</string>
    <string name="toMetricTon">Ton (metric)</string>
    <string name="toShortTon">Ton (US/short)</string>
    <string name="toLongTon">Ton (UK/long)</string>
    <string name="fromTeaspoon">Teaspoon</string>
    <string name="fromTablespoon">Tablespoon</string>
    <string name="fromCup">Cup</string>
    <string name="fromFluidOunce">Fluid Ounce (US)</string>
    <string name="fromQuart">Quart (US)</string>
    <string name="fromPint">Pint (US)</string>
    <string name="fromGallon">Gallon (US)</string>
    <string name="fromBarrel">Barrel (US)</string>
    <string name="fromFluidOunceUK">Fluid Ounce (UK)</string>
    <string name="fromQuartUK">Quart (UK)</string>
    <string name="fromPintUK">Pint (UK)</string>
    <string name="fromGallonUK">Gallon (UK)</string>
    <string name="fromBarrelUK">Barrel (UK)</string>
    <string name="fromMillilitre">Millilitre</string>
    <string name="fromLitre">Litre</string>
    <string name="fromCubicCm">Cubic cm</string>
    <string name="fromCubicM">Cubic Metre</string>
    <string name="fromCubicInch">Cubic Inch</string>
    <string name="fromCubicFoot">Cubic Foot</string>
    <string name="fromCubicYard">Cubic Yard</string>
    <string name="toTeaspoon">Teaspoon</string>
    <string name="toTablespoon">Tablespoon</string>
    <string name="toCup">Cup</string>
    <string name="toFluidOunce">Fluid Ounce (US)</string>
    <string name="toQuart">Quart (US)</string>
    <string name="toPint">Pint (US)</string>
    <string name="toGallon">Gallon (US)</string>
    <string name="toBarrel">Barrel (US)</string>
    <string name="toFluidOunceUK">Fluid Ounce (UK)</string>
    <string name="toQuartUK">Quart (UK)</string>
    <string name="toPintUK">Pint (UK)</string>
    <string name="toGallonUK">Gallon (UK)</string>
    <string name="toBarrelUK">Barrel (UK)</string>
    <string name="toMillilitre">Millilitre</string>
    <string name="toLitre">Litre</string>
    <string name="toCubicCm">Cubic cm</string>
    <string name="toCubicM">Cubic Metre</string>
    <string name="toCubicInch">Cubic Inch</string>
    <string name="toCubicFoot">Cubic Foot</string>
    <string name="toCubicYard">Cubic Yard</string>
    <string name="fromKmph">Kilometre/hour</string>
    <string name="fromMph">Mile/hour</string>
    <string name="fromMps">Metre/second</string>
    <string name="fromFps">Foot/second</string>
    <string name="fromKnot">Knot</string>
    <string name="toKmph">Kilometre/hour</string>
    <string name="toMph">Mile/hour</string>
    <string name="toMps">Metre/second</string>
    <string name="toFps">Foot/second</string>
    <string name="toKnot">Knot</string>
    <string name="fromSqKilometre">Sq Kilometre</string>
    <string name="fromSqMetre">Sq Metre</string>
    <string name="fromSqCentimetre">Sq Centimetre</string>
    <string name="fromHectare">Hectare</string>
    <string name="fromSqMile">Sq Mile</string>
    <string name="fromSqYard">Sq Yard</string>
    <string name="fromSqFoot">Sq Foot</string>
    <string name="fromSqInch">Sq Inch</string>
    <string name="fromAcre">Acre</string>
    <string name="toSqKilometre">Sq Kilometre</string>
    <string name="toSqMetre">Sq Metre</string>
    <string name="toSqCentimetre">Sq Centimetre</string>
    <string name="toHectare">Hectare</string>
    <string name="toSqMile">Sq Mile</string>
    <string name="toSqYard">Sq Yard</string>
    <string name="toSqFoot">Sq Foot</string>
    <string name="toSqInch">Sq Inch</string>
    <string name="toAcre">Acre</string>
    <string name="fromMPascal">Megapascal</string>
    <string name="fromkPascal">Kilopascal</string>
    <string name="fromPascal">Pascal</string>
    <string name="fromBar">Bar</string>
    <string name="fromPsi">PSI</string>
    <string name="fromPsf">PSF</string>
    <string name="fromAtmosphere">Atmosphere</string>
    <string name="fromMmhg">mm Hg</string>
    <string name="fromTorr">Torr</string>
    <string name="toMPascal">Megapascal</string>
    <string name="tokPascal">Kilopascal</string>
    <string name="toPascal">Pascal</string>
    <string name="toBar">Bar</string>
    <string name="toPsi">PSI</string>
    <string name="toPsf">PSF</string>
    <string name="toAtmosphere">Atmosphere</string>
    <string name="toMmhg">mm Hg</string>
    <string name="toTorr">Torr</string>
    <string name="fromMpgUS">Miles/gallon (US)</string>
    <string name="fromMpgUK">Miles/gallon (UK)</string>
    <string name="fromLp100k">Litres/100km</string>
    <string name="fromKmpl">Kilometers/litre</string>
    <string name="fromMpl">Miles/litre</string>
    <string name="toMpgUS">Miles/gallon (US)</string>
    <string name="toMpgUK">Miles/gallon (UK)</string>
    <string name="toLp100k">Litres/100km</string>
    <string name="toKmpl">Kilometers/litre</string>
    <string name="toMpl">Miles/litre</string>
    <string name="fromYear">Year</string>
    <string name="fromMonth">Month</string>
    <string name="fromWeek">Week</string>
    <string name="fromDay">Day</string>
    <string name="fromHour">Hour</string>
    <string name="fromMinute">Minute</string>
    <string name="fromSecond">Second</string>
    <string name="fromMillisecond">Millisecond</string>
    <string name="fromNanosecond">Nanosecond</string>
    <string name="toYear">Year</string>
    <string name="toMonth">Month</string>
    <string name="toWeek">Week</string>
    <string name="toDay">Day</string>
    <string name="toHour">Hour</string>
    <string name="toMinute">Minute</string>
    <string name="toSecond">Second</string>
    <string name="toMillisecond">Millisecond</string>
    <string name="toNanosecond">Nanosecond</string>
    <string name="fromWatt">Watt</string>
    <string name="fromKilowatt">Kilowatt</string>
    <string name="fromMegawatt">Megawatt</string>
    <string name="fromHp">HP (metric)</string>
    <string name="fromHpUK">HP (mechanical)</string>
    <string name="fromFtLbfps">ft-lbf/second</string>
    <string name="fromCalps">Calorie/second</string>
    <string name="fromBtups">BTU/second</string>
    <string name="fromkVA">kV-A</string>
    <string name="fromElectronVolt">eV</string>
    <string name="toWatt">Watt</string>
    <string name="toKilowatt">Kilowatt</string>
    <string name="toMegawatt">Megawatt</string>
    <string name="toHp">HP (metric)</string>
    <string name="toHpUK">HP (mechanical)</string>
    <string name="toFtLbfps">ft-lbf/second</string>
    <string name="toCalps">Calorie/second</string>
    <string name="fromFtlbF">ft-lbf</string>
    <string name="fromInlbF">in-lbf</string>
    <string name="toFtlbF">ft-lbf</string>
    <string name="toInlbF">in-lbf</string>
    <string name="fromNm">N-m</string>
    <string name="toNm">N-m</string>
    <string name="menuSetDecimal">Set Decimal Places</string>
    <string name="menuSetSeparator">Set Group Separator</string>
    <string name="menuSetDecimalSeparator">Set Decimal Separator</string>
    <string name="menuHelp">Help</string>
    <string name="menuToggle">Toggle Light/Dark Theme</string>
    <string name="menuRate">Rate This App!</string>
    <string name="menuRequest">Request A Unit</string>
    <string name="menuClear">Clear Value</string>
    <string name="menuDonate">Donate!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="area">Area</string>
    <string name="cooking">Cooking</string>
    <string name="storage">Digital Storage</string>
    <string name="energy">Energy</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="length">Length / Distance</string>
    <string name="mass">Mass / Weight</string>
    <string name="power">Power</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="torque">Torque</string>
    <string name="volume">Volume</string>
    <string name="prefs_title_formatting">Formatting</string>
    <string name="prefs_summary_number_decimals">Set the number of decimal places to be shown in converted value</string>
    <string name="prefs_title_number_decimals">Number of Decimals</string>
    <string name="prefs_summary_group_separator">Set the group separator to be shown in converted value</string>
    <string name="prefs_title_group_separator">Group Separator</string>
    <string name="prefs_summary_decimal_separator">Set the decimal separator to be shown in converted value</string>
    <string name="prefs_title_decimal_separator">Decimal Separator</string>
</resources>