<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menuSetDecimalPlaces"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menuSetDecimal">
    </item>
    <item
        android:id="@+id/menuSetSeparator"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/menuSetSeparator">
    </item>
    <item
        android:id="@+id/menuSetDecimalSeparator"
        android:orderInCategory="120"
        app:showAsAction="never"
        android:title="@string/menuSetDecimalSeparator">
    </item>
    <item
        android:id="@+id/menuDonate"
        android:orderInCategory="125"
        app:showAsAction="never"
        android:title="@string/menuDonate" />

    <item
        android:id="@+id/menuRequest"
        android:orderInCategory="130"
        app:showAsAction="never"
        android:title="@string/menuRequest">
    </item>
    <item
        android:id="@+id/menuToggle"
        android:orderInCategory="140"
        app:showAsAction="never"
        android:title="@string/menuToggle">
    </item>
    <item
        android:id="@+id/menuHelp"
        android:orderInCategory="150"
        app:showAsAction="never"
        android:title="@string/menuHelp">
    </item>
    <item
        android:id="@+id/menuRate"
        android:orderInCategory="160"
        app:showAsAction="never"
        android:title="@string/menuRate">
    </item>
    <item
        android:id="@+id/menuClear"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="90"
        app:showAsAction="always"
        android:title="@string/menuClear">
    </item>

</menu>