<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefs_title_formatting">

        <ListPreference
            android:key="number_decimals"
            android:title="@string/prefs_title_number_decimals"
            android:summary="@string/prefs_summary_number_decimals"
            android:defaultValue="@integer/default_number_decimals"
            android:entries="@array/number_decimals"
            android:entryValues="@array/number_decimals"/>

        <ListPreference
            android:key="group_separator"
            android:title="@string/prefs_title_group_separator"
            android:summary="@string/prefs_summary_group_separator"
            android:defaultValue="@string/default_group_separator"
            android:entries="@array/group_separators"
            android:entryValues="@array/group_separators"/>

        <ListPreference
            android:key="decimal_separator"
            android:title="@string/prefs_title_decimal_separator"
            android:summary="@string/prefs_summary_decimal_separator"
            android:defaultValue="@string/default_decimal_separator"
            android:entries="@array/decimal_separators"
            android:entryValues="@array/decimal_separators"/>

    </PreferenceCategory>

</PreferenceScreen>