<?xml version="1.0" encoding="utf-8"?>
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/length_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	   	
	   	<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	   	   	<!-- Transparent image view to anchor the radio groups with the swap image in the main layout -->
	   	    <include 
	   	        android:id="@+id/lengthDummyImage"
	   	        layout="@layout/transparent_image" />
	   	    
	   	    <RadioGroup
	            android:id="@+id/radioFromLength"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_toLeftOf="@id/lengthDummyImage" >

	            <RadioButton
	                android:id="@+id/fromKilometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromKilometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromMile"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromMile"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromMetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromMetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromCentimetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromCentimetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromMillimetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromMillimetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromMicrometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromMicrometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	            
	           	<RadioButton
	                android:id="@+id/fromNanometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromNanometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromYard"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromYard"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromFeet"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromFeet"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromInch"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromInch"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromNauticalMile"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromNauticalMile"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/fromFurlong"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromFurlong"
	                android:textSize="@dimen/radioButtonTextSize" />
	            
	            <RadioButton
	                android:id="@+id/fromLightYear"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/fromLightYear"
	                android:textSize="@dimen/radioButtonTextSize" />
	            	            
        	</RadioGroup>

	        <RadioGroup
	            android:id="@+id/radioToLength"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_toRightOf="@id/lengthDummyImage" >

	            <RadioButton
	                android:id="@+id/toKilometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toKilometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toMile"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toMile"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toMetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toMetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toCentimetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toCentimetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toMillimetre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toMillimetre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toMicrometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toMicrometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	            
	            <RadioButton
	                android:id="@+id/toNanometre"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toNanometre"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toYard"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toYard"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toFeet"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toFeet"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toInch"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toInch"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toNauticalMile"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toNauticalMile"
	                android:textSize="@dimen/radioButtonTextSize" />
	
	            <RadioButton
	                android:id="@+id/toFurlong"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toFurlong"
	                android:textSize="@dimen/radioButtonTextSize" />
	            
	            <RadioButton
	                android:id="@+id/toLightYear"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:minHeight="@dimen/radioButtonSpacing"
	                android:text="@string/toLightYear"
	                android:textSize="@dimen/radioButtonTextSize" />
			
			</RadioGroup>
	    </RelativeLayout>
    </ScrollView>