<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/torque_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Transparent image view to anchor the radio groups with the swap image in the main layout -->
        <include
            android:id="@+id/timeDummyImage"
            layout="@layout/transparent_image" />

        <RadioGroup
            android:id="@+id/radioFromTorque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/timeDummyImage" >

            <RadioButton
                android:id="@+id/fromNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/fromNm"
                android:textSize="@dimen/radioButtonTextSize" />

            <RadioButton
                android:id="@+id/fromFtlbF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/fromFtlbF"
                android:textSize="@dimen/radioButtonTextSize" />

            <RadioButton
                android:id="@+id/fromInlbF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/fromInlbF"
                android:textSize="@dimen/radioButtonTextSize" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioToTorque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/timeDummyImage" >

            <RadioButton
                android:id="@+id/toNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/toNm"
                android:textSize="@dimen/radioButtonTextSize" />

            <RadioButton
                android:id="@+id/toFtlbF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/toFtlbF"
                android:textSize="@dimen/radioButtonTextSize"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/toInlbF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/radioButtonSpacing"
                android:text="@string/toInlbF"
                android:textSize="@dimen/radioButtonTextSize" />

        </RadioGroup>

    </RelativeLayout>
</ScrollView>